--- a/project-lil-playlist/src/App.css
+++ b/project-lil-playlist/src/App.css
@@ -1,3 +1,6 @@
+body {
+  background-color: black;
+}
 header {
   background-color: #282c34;
   min-height: 30vh;
@@ -10,16 +13,31 @@ header {
 }
 
 .headerBar {
-  background-color: orange;
+  background-color: #282c34;
   color: whitesmoke;
   margin: 5px;
-  border: 5px solid black;
+  border: 5px solid #282c34;
+  text-align: center;
 }
 
+.tableRow {
+  background-color: orange;
+}
 .tableBody {
-  background-color: white;
+  background-color: red;
   color: black;
 }
 .SongForm {
-  background-color: rgb(236, 76, 76);
+  background-color: orange;
+  padding: 5px;
+  margin: 10px;
+}
+
+.inputText {
+  height: 25px;
+  margin: 10px;
+}
+.inputDropDown {
+  height: 25px;
+  margin: 10px;
 }
